--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,4 +1,79 @@
 {
+  "editProperty": {
+    "loading": "Loading property...",
+    "errorTitle": "Loading Error",
+    "backToProperties": "Back to Properties",
+    "breadcrumb": {
+      "properties": "Properties",
+      "edit": "Edit"
+    },
+    "title": "Edit Property",
+    "subtitle": "Update your property information",
+    "sections": {
+      "basicInfo": "Basic Information",
+      "location": "Location",
+      "features": "Features",
+      "image": "Image",
+      "services": "Included Services"
+    },
+    "fields": {
+      "title": "Title",
+      "description": "Description",
+      "status": "Status",
+      "monthlyPrice": "Monthly Price",
+      "address": "Address",
+      "city": "City",
+      "latitude": "Latitude",
+      "longitude": "Longitude",
+      "area": "Area (m²)",
+      "bedrooms": "Bedrooms",
+      "bathrooms": "Bathrooms",
+      "parking": "Parking Spaces",
+      "imageUrl": "Image URL"
+    },
+    "placeholders": {
+      "title": "Ex: Modern apartment in the center",
+      "description": "Describe the main features of the property...",
+      "address": "Ex: Street 10 #15-20",
+      "city": "Ex: Popayán",
+      "imageUrl": "https://example.com/image.jpg"
+    },
+    "status": {
+      "available": "Available",
+      "rented": "Rented",
+      "maintenance": "Under Maintenance"
+    },
+    "services": {
+      "water": "Water",
+      "electricity": "Electricity",
+      "gas": "Gas",
+      "internet": "Internet",
+      "cableTv": "Cable TV",
+      "security": "Security",
+      "parking": "Parking",
+      "gym": "Gym",
+      "pool": "Pool",
+      "bbqArea": "BBQ Area",
+      "laundry": "Laundry",
+      "elevator": "Elevator"
+    },
+    "buttons": {
+      "cancel": "Cancel",
+      "save": "Save Changes",
+      "saving": "Saving..."
+    },
+    "messages": {
+      "updateSuccess": "Property updated successfully!",
+      "updateError": "Error updating property",
+      "noPermission": "You don't have permissions to edit this property",
+      "cancelConfirm": "Are you sure you want to cancel? Unsaved changes will be lost."
+    },
+    "errors": {
+      "loadError": "Could not load property",
+      "noPermission": "You don't have permissions to edit this property",
+      "mustLogin": "You must log in to edit properties"
+    }
+  },
   "home": {
     "hero": {
       "badge": "Your ideal home awaits",
@@ -218,14 +293,26 @@
       "header": "Interested?",
       "subHeader": "Request more information",
       "ownerProperty": "This is your property",
+      "editProperty": "Edit Property",
+      "deleteProperty": "Delete Property",
       "requestVisit": "Request Visit",
       "login": "Login",
+      "loginRequired": "You need to log in to request a visit. Do you want to go to login?",
       "notAvailable": "Not Available",
       "notAvailableDesc": "This property is not available",
       "contactAgent": "Contact Agent",
+      "agentContact": "Contact function - Implement with WhatsApp, Email, etc.",
       "save": "Save",
       "saved": "Saved",
-      "share": "Share"
+      "share": "Share",
+      "shareText": "Check out this property: {title}",
+      "linkCopied": "Link copied to clipboard!",
+      "deleteConfirm": "Are you sure you want to delete this property? This action cannot be undone.",
+      "deleteFinalConfirm": "This is your last chance. Do you really want to permanently delete this property?",
+      "deleteSuccess": "Property deleted successfully!",
+      "deleteError": "Error deleting property.",
+      "deleteNoPermission": "You don't have permissions to delete this property.",
+      "deleteNotFound": "Property not found."
     },
     "meta": {
       "published": "Published",
@@ -282,11 +369,6 @@
       "bathrooms": "0",
       "services": "WiFi, Gas, Water, Electricity, Parking",
       "imageUrl": "https://example.com/image.jpg"
-    },
-    "status": {
-      "available": "Available",
-      "rented": "Rented",
-      "maintenance": "Under Maintenance"
     }
   },
   "time": {
@@ -392,14 +474,12 @@
   "about": {
     "title": "About Us",
     "subtitle": "Over 10 years connecting people with their ideal homes",
-    
     "stats": {
       "years": "Years of Experience",
       "properties": "Properties Managed",
       "clients": "Satisfied Clients",
       "satisfaction": "Satisfaction"
     },
-
     "history": {
       "title": "Our History",
       "timeline": [
@@ -435,7 +515,6 @@
         }
       ]
     },
-
     "team": {
       "title": "Our Team",
       "text": "We are a group of professionals passionate about the real estate sector, committed to providing the best experience to our customers. Each member brings their unique expertise to create innovative solutions.",
@@ -462,7 +541,6 @@
         }
       ]
     },
-
     "values": {
       "title": "Our Values",
       "list": [
@@ -488,7 +566,6 @@
         }
       ]
     },
-
     "why": {
       "title": "Why Choose Rentus?",
       "features": [
@@ -530,7 +607,6 @@
         }
       ]
     },
-
     "mission": {
       "title": "Our Mission",
       "text": "Facilitate the perfect match between properties and people, using cutting-edge technology to create exceptional experiences in the real estate market.",
@@ -541,7 +617,6 @@
         "Create sustainable and prosperous communities"
       ]
     },
-
     "vision": {
       "title": "Our Vision",
       "text": "To be the leading platform in Latin America that completely transforms how people find, rent and manage properties.",
@@ -552,7 +627,6 @@
         "Achieve carbon neutral in all our operations"
       ]
     },
-
     "process": {
       "title": "Our Process",
       "description": "A simple and transparent path from search to moving into your new home",
@@ -584,7 +658,6 @@
         }
       ]
     },
-
     "testimonials": {
       "title": "What Our Customers Say",
       "description": "Real stories from people who found their ideal home with Rentus",
@@ -633,7 +706,6 @@
         }
       ]
     },
-
     "cta": {
       "title": "Ready to Find Your Ideal Home?",
       "description": "Join thousands of people who already trust Rentus for their real estate needs",
