Reapply "Merge branch 'main' into work/miguel-frontend"
This reverts commit 74622630fa23d58fc0fece2edef09ba805648fa4.

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -213,7 +213,6 @@
             "logout": "Sign Out",
             "greeting": "Hello"
         },
-        
         "dropdown": {
             "myProfile": "My Profile",
             "notifications": "Notifications",
@@ -226,8 +225,7 @@
             "maintenance": "Maintenance",
             "ownerRequests": "Owner Requests",
             "myRequests": "My Requests",
-            "settings": "Settings",
-            "adminPanel": "Admin Panel"
+            "settings": "Settings"
         },
         "alerts": {
             "logoutSuccess": {
