fix: resolve SyntaxError due to invalid linked format

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -410,7 +410,7 @@
     },
     "contact": {
       "title": "Contact",
-      "email": "support@RentUs.com",
+      "email": "support@rentusco.com",
       "phone": "+57 3218598902",
       "address": "RentUs Street 123, Popayán"
     },
