--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -410,7 +410,7 @@
     },
     "contact": {
       "title": "Contacto",
-      "email": "soporte@RentUs.com",
+      "email": "support@rentusco.com",
       "phone": "+57 3218598902",
       "address": "Calle RentUs 123, Popayán"
     },
