fix(ui): resolve background z-index issues affecting footer and layout

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -417,8 +417,8 @@
     "contact": {
       "title": "Contact",
       "email": "support@rentusco.com",
-      "phone": "+57 3218598902",
-      "address": "RentUs Street 123, Popayán"
+      "phone": "+57 3104939012",
+      "address": "Cl. 4 #2-80, Centro, Popayán, Cauca"
     },
     "social": {
       "title": "Follow Us"
