--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -417,8 +417,8 @@
     "contact": {
       "title": "Contacto",
       "email": "support@rentusco.com",
-      "phone": "+57 3218598902",
-      "address": "Calle RentUs 123, Popayán"
+      "phone": "+57 3104939012",
+      "address": "Cl. 4 #2-80, Centro, Popayán, Cauca"
     },
     "social": {
       "title": "Síguenos"
